change DEFAULT_PREFETCH_PERIOD to 1s optimize `SegmentChainId` just try set next not ensure success,prevent the problem of ID gap. optimize `PrefetchWorker` use more friendly thread names .