@@ -8,6 +8,29 @@ java {
     }
 }
 
+application{
+    mainClass.set("me.ahoo.cosid.example.ExampleServer")
+    applicationDefaultJvmArgs = listOf(
+        "-Xms512M",
+        "-Xmx512M",
+        "-XX:MaxMetaspaceSize=128M",
+        "-XX:MaxDirectMemorySize=256M",
+        "-Xss1m",
+        "-server",
+        "-XX:+UseG1GC",
+        "-Xlog:gc*:file=logs/${applicationName}-gc.log:time,tags:filecount=10,filesize=32M",
+        "-XX:+HeapDumpOnOutOfMemoryError",
+        "-XX:HeapDumpPath=data",
+        "-Dcom.sun.management.jmxremote",
+        "-Dcom.sun.management.jmxremote.authenticate=false",
+        "-Dcom.sun.management.jmxremote.ssl=false",
+        "-Dcom.sun.management.jmxremote.port=5555",
+        "-Dspring.cloud.bootstrap.enabled=true",
+        "-Dspring.cloud.bootstrap.location=config/bootstrap.yaml",
+        "-Dspring.config.location=file:./config/"
+    )
+}
+
 dependencies {
     implementation(platform(project(":cosid-dependencies")))
     implementation(project(":spring-boot-starter-cosid"))
